v1.2 - Pending
	+ Audioscrobbler support (requires python-elementtree) (Owen)
	+ Ability to rename playlists (requires mpd >= 0.13)
	+ Prevent continually searching for artwork if it's not found the first time
	+ Allows resetting artwork to the default image
	+ Bug: Multimedia keys no longer work in Gnome 2.18 (Florian)
	+ Bug: Hide statusbar in collapse mode when showing from systray
	+ Bug: Cover artwork filename doesn't use system's locale charset

v1.1.1 - May 18, 2007
	+ Add Swedish translation (Daniel Nylander)
	+ Bug: Incorrect artist can sometimes be set for album art/info (vEX)
	+ Bug: Artwork isn't set when there is a single image in the song's dir
	+ Bug: Improve handling under tiling WMs like ion3
	+ Bug: A 2nd instance isn't prevented with dbus/python 2.4 (Sebastian)

v1.1 - May 7, 2007
	+ Ctrl-J for xmms-like search filter (vEX/Eduard)
	+ Implemented logic for Various Artists albums
	+ Cover art pref: save to ~/.covers or file's respective dir
	+ Support for GNOME session management
	+ Allow searching through ALL metadata in library
	+ Link artist and album name in song info window to wikipedia entry
	+ Add shuffle, repeat, --visible, and --hidden commandline arguments
	+ Show if mpd is updating in statusbar
	+ Save last used option in library search
	+ Update code for dbus-python 0.80 API (Jordan)
	+ Ellipsize text in treeviews, current playing song (Jordan)
	+ Add button for listing of shortcuts to About dialog
	+ Resize cover art to fit song info window
	+ Added Simplified Chinese translation (Desmond Chang)
	+ Bug: Prevent tracebacks between withdrawing app & gtk.StatusIcon
	+ Bug: Fix error if mpd is not running and sonata starts hidden
	+ Bug: Can't manually set artwork across filesystems
	+ Bug: Can't use find-as-you-type in the current playlist
	+ Bug: Right-click menu closes right away for some users

v1.0.1 - February 13, 2007
	+ Make lyrics fetching optional
	+ Allow editing of stream name/url